--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
         <h4>Spring Security：Spring安全框架，提供了常规功能和诸多高级特性以满足复杂场景下的安全需求。</h4>
         <h4>Spring MVC：Web访问接口与控制器，默认页面，拦截器，全局异常，Json消息转换，自动转换时间，静态资源访问，动态国际化支持等。</h4>
         <h4>Thymeleaf：页面视图的模板引擎，很适合作为Web应用的视图的业务逻辑层。</h4>
-        <h4>QueryDSL：通用高效的查询框架，专注于通过Java API构建类型安全的SQL查询，支持SQL标准且可跨数据库。</h4>
+        <h4>QueryDSL：通用高效的查询框架，专注于通过API构建类型安全的SQL查询，支持SQL标准且可跨数据库，详细的参考案例见test目录。</h4>
         <h4>Spring Cache + EhCache：使用声明式缓存，对方法返回值进行缓存，使用EhCache作为本地缓存，后续扩展Redis做共享缓存。</h4>
         <h4>Protostuff 序列化：Protostuff 序列化可以大幅提高时间及空间性能，适合传输对象，比如存储到Redis等。</h4>
         <h4>Spring AOP：使用AOP对方法日志进行统一处理，也可用做收集信息、事务处理、权限校验等。</h4>
