--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
         <h4>更快的项目搭建、更高开发和运行效率、更灵活的应对需求变化、更好的可重构和维护性。</h4>
         <h2>集成的功能：</h2>
         <h4>Spring Framework：Spring基础框架，提供Context、Task Schedule等功能支持。</h4>
-        <h4>Spring Security：Spring安全框架，提供了常规功能和诸多高级特性以满足复杂场景下的安全需求。</h4>
+        <h4>Spring Security：Spring安全框架，提供了常规功能和诸多高级特性以满足复杂场景下的安全需求，已实现基于注解的基本权限体系。</h4>
         <h4>Spring MVC：Web访问接口与控制器，Restful，全局异常，自动转换时间，静态资源访问，动态国际化支持等。</h4>
         <h4>Thymeleaf：页面视图的模板引擎，页面侵入较少，很适合作为Web应用视图上的业务逻辑控制。</h4>
         <h4>QueryDSL：通用高效的类型安全的查询框架，它的API语法与SQL几乎一致，配合IDE具有非常高的开发效率、利于重构、适应需求变更，覆盖SQL标准且可跨数据库。</h4>
