--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
 <div class="container col-md-8 col-md-offset-2">
     <h1><strong>Spring Boot Faster</strong></h1>
     <div style="text-align: left">
-        <h3>Spring Boot 整合常用框架组成完整可用的快速开发模板。</h3>
+        <h3>Spring Boot 整合常用框架组成完整可用的快速开发模板，参考自生产项目，配置到细节。</h3>
         <h4>更快的项目搭建、更高开发和运行效率、更灵活的应对需求变化、更好的可重构和维护性。</h4>
         <h2>集成的功能：</h2>
         <h4>Spring Framework：Spring基础框架，提供Context、Task Schedule等功能支持。</h4>
