登陆改成登录

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,7 +52,7 @@
         <h4>Spring Cache + EhCache：使用声明式缓存，对方法返回值进行缓存，使用EhCache作为本地缓存，resources目录中提供了Redis参考。</h4>
         <h4>Protostuff 序列化：Protostuff 序列化可以大幅提高时间及空间性能，适合传输对象，比如存储到Redis等。</h4>
         <h4>Spring AOP：使用AOP对方法日志进行统一处理，也可用做收集信息、事务处理、权限校验等。</h4>
-        <h4>RSA 和 AES：RSA 非对称可逆加密可用于登陆加密等， AES 对称可逆加密可用于内部存储数据。</h4>
+        <h4>RSA 和 AES：RSA 非对称可逆加密可用于登录加密等， AES 对称可逆加密可用于内部存储数据。</h4>
         <h4>MySql数据库：默认使用MySql，驱动和配置参考 pom.xml 和 application.yml 中的数据库连接信息。</h4>
         <h4>Swagger2：扫描Controller及标记注解，生成接口文档，访问路径：/swagger-ui.html。</h4>
         <h4>JWT：Json Web Token，使用JWT可以把认证信息存储到用户端，并对用户提交的认证信息进行验证。</h4>
