更新注释说明

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -128,11 +128,11 @@
           </div>
           <div class="row">
             <div class="col-md-4">
-              <h3>QueryDSL</h3>
+              <h3>Querydsl</h3>
               <p>通用高效的类型安全的查询框架，使用API覆盖标准SQL且可跨数据库，具有很高的开发和执行效率。</p>
             </div>
             <div class="col-md-4">
-              <h3>QueryDSL 案例</h3>
+              <h3>Querydsl 案例</h3>
               <p>Maven生成插件配置、独立的参考案例（位于test目录），覆盖绝大多数应用场景，可快速上手。</p>
             </div>
             <div class="col-md-4">
