优化配置文件

--- a/faster-ui/src/main/resources/static/security/authority.html
+++ b/faster-ui/src/main/resources/static/security/authority.html
@@ -18,8 +18,8 @@
       <button class="layui-btn layui-btn-normal" onclick="createAction()">
         <i class="glyphicon glyphicon-plus"></i> 新增
       </button>
-      <a class="layui-btn layui-btn-warm" href="../security/exportAuthorityCodes">
-        <i class="glyphicon glyphicon-download-alt"></i> 编码常量类
+      <a class="layui-btn layui-btn" href="../security/exportAuthorityCodes">
+        <i class="glyphicon glyphicon-download-alt"></i> 常量类
       </a>
     </div>
   </div>
