--- a/faster-ui/src/main/resources/static/index.html
+++ b/faster-ui/src/main/resources/static/index.html
@@ -143,7 +143,7 @@
           <div class="row">
             <div class="col-md-4">
               <h3>Spring Cache</h3>
-              <p>基于注解的缓存，默认使用EhCache作为本地缓存，resources目录中提供了Redis参考。</p>
+              <p>基于注解的缓存，默认使用EhCache作为本地缓存，可替换为Redis。</p>
             </div>
             <div class="col-md-4">
               <h3>Protostuff</h3>
